# PrintWatcher

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PrintWatcher.xml  README.md  README_NEW_LAPTOP.md  SECURITY.md  bootstrap.ps1  print_watcher.py  print_watcher_tray.py  print_watcher_ui.py  printwatcher-backend.spec  printwatcher-cli.spec  printwatcher.spec  printwatcher_app.py  pyproject.toml
.agents/skills/PrintWatcher/: SKILL.md
.agents/skills/PrintWatcher/agents/: openai.yaml
.claude/: ecc-tools.json  identity.json
.claude/commands/: update-documentation-file.md
.claude/homunculus/instincts/inherited/: PrintWatcher-instincts.yaml
.claude/hooks/: session-start.sh
.claude/plan/: glass-depth-pass.md  ui-cleanup.md
.claude/reviews/: pr-13-review.md  pr-15-review.md
.codex/: AGENTS.md
.github/workflows/: build.yml
csharp/: Directory.Build.props  PrintWatcher.sln
csharp/src/PrintWatcher.Shell/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  PrintWatcher.Shell.csproj  app.manifest
csharp/src/PrintWatcher.Shell.Tests/: ApiClientTests.cs  BackendLocatorTests.cs  BackendSupervisorTests.cs  DashboardViewModelTests.cs  EventStreamTests.cs  GlassMaterialTests.cs  HistoryViewModelTests.cs  OptionsViewModelTests.cs  PendingViewModelTests.cs  PrintWatcher.Shell.Tests.csproj  SettingsViewModelTests.cs  ShellViewModelTests.cs  TextScaleTests.cs  ThemePaletteTests.cs  ToolsViewModelTests.cs
csharp/src/PrintWatcher.Shell/Controls/: OptionsPanel.xaml  OptionsPanel.xaml.cs  PageHeader.xaml  PageHeader.xaml.cs  StatusPip.xaml  StatusPip.xaml.cs
csharp/src/PrintWatcher.Shell/Models/: InboxHealth.cs  JsonContext.cs  PendingItem.cs  Preferences.cs  PrintOptions.cs  PrintRecord.cs  Printers.cs  State.cs  Stats.cs  UpdateCheck.cs  WsEnvelope.cs
csharp/src/PrintWatcher.Shell/Pages/: DashboardPage.xaml  DashboardPage.xaml.cs  HistoryPage.xaml  HistoryPage.xaml.cs  PendingPage.xaml  PendingPage.xaml.cs  SettingsPage.xaml  SettingsPage.xaml.cs  ToolsPage.xaml  ToolsPage.xaml.cs
csharp/src/PrintWatcher.Shell/Services/: ApiClient.cs  BackendLocator.cs  BackendSupervisor.cs  EventStream.cs  GlassDepth.cs  GlassMaterial.cs  NotifyIconService.cs  TextScale.cs  ThemePalette.cs  ThemeService.cs  ToastService.cs
csharp/src/PrintWatcher.Shell/Styles/: Common.xaml
csharp/src/PrintWatcher.Shell/ViewModels/: DashboardViewModel.cs  HistoryViewModel.cs  ObservableObject.cs  OptionsViewModel.cs  PendingViewModel.cs  RelayCommand.cs  SettingsViewModel.cs  ShellViewModel.cs  StatTileItem.cs  ToolsViewModel.cs
docs/: ARCHITECTURE.md  DEV_SETUP.md  IPAD_QUICKREF.md  IPAD_SHORTCUT.md
printwatcher/: __init__.py  core.py
printwatcher/server/: __init__.py  __main__.py  app.py  auth.py  dto.py  events.py  state.py  tools.py  websocket.py
printwatcher/server/routes/: __init__.py  history.py  inbox.py  options.py  pending.py  prefs.py  printer_defaults.py  printers.py  shutdown.py  state.py  themes.py  tools.py  upload.py
samples/: sample-class.tsv
scripts/: __init__.py  attendance_sheet.py  auto_merge.py  cleanup_printed.py  clear_queue.py  dedupe_inbox.py  email_to_inbox.py  history_search.py  name_stamper.py  parent_letter.py  pdf_compress.py  pdf_inspect.py  pdf_merge.py  pdf_split.py  pdf_watermark.py  preview_shortcut_path.py  printer_test.py  redact.py  roster.py  roster_split.py  schedule_print.py  screenshot_to_print.py  seating_chart.py  setup_inbox_presets.py  student_portfolio.py  sub_packet.py  verify_environment.py  web_to_pdf.py  weekly_report.py
tests/: conftest.py  test_cache_optimizations.py  test_correctness_bugs.py  test_dto_parity.py  test_history.py  test_options.py  test_path_resolution.py
tests/server/: conftest.py  test_auth.py  test_history.py  test_inbox_health.py  test_main_console_streams.py  test_options.py  test_pause.py  test_printer_defaults.py  test_reprint.py  test_state.py  test_tools.py  test_update_check.py  test_upload.py  test_websocket.py
