[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "printwatcher"
version = "0.3.0"
description = "Auto-print files dropped into a OneDrive folder. Tray + desktop UI + per-job options + multi-user history."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Joseph Kehan", email = "noreply@example.com" },
]
keywords = ["onedrive", "printing", "watcher", "sumatrapdf", "ipad", "schools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Printing",
    "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = [
    "watchdog>=3",
    "pystray>=0.19",
    "pillow>=10",
]

[project.optional-dependencies]
pdf = ["pypdf>=4", "reportlab>=4", "pypdfium2>=4"]
ctk = ["customtkinter>=5.2"]
sentry = ["sentry-sdk>=1.40"]
# Headless backend that the WinUI 3 shell connects to (planned for v0.4).
backend = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "python-multipart>=0.0.9",
]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "pyinstaller>=6",
    "pypdf>=4",
    "reportlab>=4",
    "pypdfium2>=4",
    "customtkinter>=5.2",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "python-multipart>=0.0.9",
]

[project.urls]
Homepage = "https://github.com/josephkehan-prog/PrintWatcher"
Repository = "https://github.com/josephkehan-prog/PrintWatcher"
Issues = "https://github.com/josephkehan-prog/PrintWatcher/issues"

[project.scripts]
printwatcher = "printwatcher_app:main"
printwatcher-ui = "print_watcher_ui:main"
printwatcher-tray = "print_watcher_tray:main"
printwatcher-cli = "print_watcher:main"

[project.gui-scripts]
printwatcher-gui = "print_watcher_ui:main"

[tool.setuptools]
py-modules = [
    "print_watcher",
    "print_watcher_tray",
    "print_watcher_ui",
    "printwatcher_app",
]
packages = [
    "scripts",
    "printwatcher",
    "printwatcher.server",
    "printwatcher.server.routes",
]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["assets/printwatcher.ico", "assets/printwatcher.png"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-q", "--strict-markers"]
asyncio_mode = "auto"
markers = [
    "slow: tests that take more than a second",
]
